Ported App from Angular 13 to Angular 17

--- a/src/styles.css
+++ b/src/styles.css
@@ -1,1 +1,123 @@
 /* You can add global styles to this file, and also import other style files */
+
+html, body { height: 100%; }
+body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
+
+
+.jumbotron {
+    padding: 4rem 2rem;
+}
+
+
+/* Regular Red Button */
+
+.red-button-container {
+    width: 30px;
+    height: 30px;
+}
+
+.red-button-container button img {
+    width: 30px;
+    height: 30px;
+}
+
+.red-button-container button {
+    width:30px;
+    height:30px;
+    background-color: transparent;
+    border: none;
+    padding: 0;
+}
+
+.red-button-container:hover {
+    background-color: red;
+}
+
+/* Small red button */
+
+.red-button-container-small {
+    width: 20px;
+    height: 20px;
+}
+
+.red-button-container-small button img {
+    width: 20px;
+    height: 20px;
+    position: relative;
+    top: -5px;
+    bottom: -5px;
+    right: 0;
+    left: 0;
+}
+
+.red-button-container-small button {
+    width:20px;
+    height:20px;
+    background-color: transparent;
+    border: none;
+    padding: 0;
+}
+
+.red-button-container-small:hover {
+    background-color: red;
+}
+
+/* Div container for input elements like checkboxes and radio-buttons */
+.input-container {
+    display: block;
+    position: relative;
+    cursor: pointer;
+    font-size: 22px;
+    
+    padding-left: 35px;
+}
+
+/* hide default control */
+.input-container input {
+    position:absolute;
+    opacity: 0;
+    cursor: pointer;
+}
+
+/* set up alternative control */
+.tc-radio {
+    position: absolute;
+    top: 0;
+    left: 0;
+    height: 30px;
+    width: 30px;
+    background-color: #eee;
+    border-radius: 50%;         /* make it a circle */
+}
+
+/* when mouse is hovering over conteiner, darken the control */
+.input-container:hover input ~ .tc-radio {
+    background-color: #ccc;
+}
+
+/* When radio-button is clicked, add blue back ground */
+.input-container input:checked ~ .tc-radio {
+    background-color: aqua;
+}
+
+/* Use :after to add dot at the end, make it invisible by default */
+.tc-radio::after {
+    content: "";
+    position: absolute;
+    display: none;
+}
+
+/* Show the dot upon beling clicked */
+.input-container input:checked ~ .tc-radio::after{
+    display: block;
+}
+
+/* set the radio dot */
+.input-container .tc-radio::after {
+    top:9px;
+    left:9px;
+    width: 12px;
+    height: 12px;
+    border-radius: 50%;
+    background: white;
+}
