--- a/src/app/components/session/session.component.html
+++ b/src/app/components/session/session.component.html
@@ -17,11 +17,16 @@
                 </tr>
                 <tr *ngFor="let session of sessionList.sessions"
                     style="background-color: white; margin: 10px 10px; border-radius: 5%;">
-                    <td>{{session.sessionId}}</td>
-                    <td>{{session.appId}}</td>
+                    <td>{{session.deviceId}}</td>
+
+                    <td>
+                        <ul *ngIf="session.apps.length">
+                            <li *ngFor="let sessionApp of session.apps">{{ sessionApp.app }}</li>
+                        </ul>
+                    </td>
                     <td>{{session.deviceInfo}}</td>
-                    <td>{{session.sessionId == currentSession ? "Current Session" : ""}} {{session.expiration ? session.expiration : "No Expiration"}}</td>
-                    <td><button class="btn {{session.sessionId == currentSession ? 'btn-danger' : 'btn-warning'}}" (click)="deleteSession(session.sessionId ? session.sessionId : '')">Delete Session</button></td>
+                    <td>{{session.deviceId == currentSession ? "Current Session" : ""}} {{session.expirationStr ? session.expirationStr : "No Expiration"}}</td>
+                    <td><button class="btn {{session.deviceId == currentSession ? 'btn-danger' : 'btn-warning'}}" (click)="deleteSession(session.deviceId ? session.deviceId : '')">Delete Session</button></td>
                 </tr>
             </table>
         </div>
