--- a/src/app/components/manage-user/manage-user.component.html
+++ b/src/app/components/manage-user/manage-user.component.html
@@ -69,7 +69,8 @@
             <div class="mb-3">
                 <label class="form-label">Mobile Phone: (Right now, US +1 is assumed, as it is the only one currently supported)</label>
                 <input class="form-control" type="number" *ngIf="userService.currentUser.mobilePhone" [(ngModel)]="userService.currentUser.mobilePhone.number" >
-                <button *ngIf="!userService?.currentUser?.phoneVerified" (click)="attemptPhoneVerification()" class="btn btn-info">Verify Phone</button>
+                <!-- <button *ngIf="!userService?.currentUser?.phoneVerified" (click)="attemptPhoneVerification()" class="btn btn-info">Verify Phone</button> -->
+                <p class="text-danger">Phone Verification is currently blocked</p>
             </div>
             <div class="mb-3">
                 <label class="form-label">Email: </label>
@@ -128,6 +129,6 @@
         <br>
         
     </div>
-    <lib-image-gallery #imgGallery (useImage)="setProfilePic($event)" [appName]="'Main'" [executeMessage]="'Set Profile Pic'"></lib-image-gallery>
+    <lib-image-gallery #imgGallery (useImage)="setProfilePic($event)" [appName]="'Main'" [executeMessage]="'Set Profile Pic'" [mbLimit]="4"></lib-image-gallery>
     
 </div>
