Set up MFA service

--- a/src/app/components/manage-user/manage-user.component.html
+++ b/src/app/components/manage-user/manage-user.component.html
@@ -79,7 +79,7 @@
             </div>
             <div class="mb-3">
                 <label class="form-label">Birthday:</label>
-                <input class="form-control" type="date" [(ngModel)]="userService.currentUser.birthday" readonly>
+                <input class="form-control" type="date" [(ngModenpm l)]="userService.currentUser.birthday" readonly>
             </div>
             <div class="mb-3">
                 <label class="form-label">Birthday Privacy: {{ currentBirthdayDetail }}</label>
