--- a/src/app/components/nav/nav.component.html
+++ b/src/app/components/nav/nav.component.html
@@ -20,6 +20,7 @@
             <!-- <li class="nav-item" *ngIf="false"><a class="nav-link" (click)="doNavigate('/subscriptions')">Subscriptions</a></li>
             <li class="nav-item"><a class="nav-link" (click)="doNavigate('/brands')">Brand Dashboard</a></li> -->
             <li class="nav-item" style="padding-left:5px;"><a class="nav-link" (click)="doNavigate('/sessions')">Sessions</a></li>
+            <li class="nav-item" style="padding-left:5px;"><a class="nav-link" (click)="doNavigate('/mfa')">Multi-Factor Auth</a></li>
               
             <li class="nav-item" style="padding-left:5px;"><button class="nav-link btn btn-submit" (click)="logout()">Log-Out</button></li>
         </ul>
