--- a/src/app/components/create-user/create-user.component.css
+++ b/src/app/components/create-user/create-user.component.css
@@ -467,3 +467,21 @@ label.RegForm {
     -webkit-animation-name: fadeInTerms;
     animation-name: fadeInTerms;
  }
+
+ .screen-darkener {
+    z-index: 3;
+    position: fixed;
+    left: 0;
+    right: 0;
+    top: 0;
+    bottom: 0;
+    background-color: rgba(0,0,0, 0.1);
+}
+
+mat-progress-spinner {
+    position: fixed;
+    left: 50%;
+    top: 50%;
+    transform: translate(-50%, -50%);
+    z-index: 3;
+}
